--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "jest": "^21.2.1",
     "npm-check-updates": "^2.13.0",
     "size-limit": "^0.11.6",
+    "uglify-es": "^3.3.9",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "vue-cli": "^2.8.2",
     "vuetify": "^0.16.7"
   }
 }
